Added JAVA_HOME for application

--- a/jdk/amazon_corretto/11/Dockerfile
+++ b/jdk/amazon_corretto/11/Dockerfile
@@ -7,3 +7,5 @@ RUN curl -s https://apt.corretto.aws/corretto.key | apt-key add - && \
     add-apt-repository 'deb https://apt.corretto.aws stable main' && \
     apt-get update; apt-get install -y java-11-amazon-corretto-jdk && \
     java --version
+
+ENV JAVA_HOME=/usr/lib/jvm/java-11-amazon-corretto
