--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
   amazoncorretto_11_ubuntu_22.04:
     image: sa201/amazoncorretto:11-ubuntu-22.04
     build:
-      context: jdk/amazon_corretto/11
+      context: jvm/amazon_corretto/11
   opencv_4.7.0_ubuntu_22.04:
     image: sa201/opencv:4.7.0-ubuntu-22.04
     build:
