--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,7 @@ services:
         BASE_IMAGE: sa201/amazoncorretto:11-ubuntu-22.04
     depends_on:
       - amazoncorretto_11_ubuntu_22.04
+
   amazoncorretto_17_ubuntu_22.04:
     image: sa201/amazoncorretto:17-ubuntu-22.04
     build:
@@ -24,4 +25,19 @@ services:
         BASE_IMAGE: sa201/amazoncorretto:17-ubuntu-22.04
     depends_on:
       - amazoncorretto_17_ubuntu_22.04
+
+
+
+  amazoncorretto_21_ubuntu_22.04:
+    image: sa201/amazoncorretto:21-ubuntu-22.04
+    build:
+      context: jvm/amazon_corretto/21
+  opencv_4.9.0_jdk21_ubuntu_22.04:
+    image: sa201/opencv:4.9.0-jdk21-ubuntu-22.04
+    build:
+      context: opencv/4.9.0
+      args:
+        BASE_IMAGE: sa201/amazoncorretto:21-ubuntu-22.04
+    depends_on:
+      - amazoncorretto_21_ubuntu_22.04
 
